downgrade to ampersand-form-view that works and fix display on small screens

--- a/web/public/css/app.css
+++ b/web/public/css/app.css
@@ -8998,14 +8998,11 @@ Copyright (c) 2014 Daniel Eden
 .panel-apps p {
   margin: 0;
 }
-.apps-list .name {
-  width: 150px;
+.apps-list .remove {
+  white-space: normal;
 }
-.apps-list .user {
-  width: 100px;
-}
-.apps-list .ref {
-  width: 100px;
+.apps-list .remove button {
+  margin-bottom: 3px;
 }
 .install-log {
   list-style: none;
