--- a/web/public/css/app/apps.styl
+++ b/web/public/css/app/apps.styl
@@ -1,14 +1,12 @@
 .panel-apps p
   margin: 0
 
-.apps-list .name
-  width: 150px
+.apps-list .remove
+  white-space: normal
 
-.apps-list .user
-  width: 100px
+  button
+    margin-bottom: 3px
 
-.apps-list .ref
-  width: 100px
 /*
 .apps .install-button
   float: right
